@startuml

title __TEMPLATETRANSACTION's Class Diagram__\n

      abstract class TemplateTransaction.BookTransaction {
          + payment()
          {abstract} ~ confirmPayment()
          {abstract} ~ printReceipt()
          {abstract} ~ startPayment()
          {abstract} ~ startTransaction()
      }

      class TemplateTransaction.PurchaseBook {
          ~ confirmPayment()
          ~ printReceipt()
          ~ startPayment()
          ~ startTransaction()
      }

      class TemplateTransaction.RentBook {
          ~ confirmPayment()
          ~ printReceipt()
          ~ startPayment()
          ~ startTransaction()
      }

      class TemplateTransaction.TemplateDriver {
          {static} + main()
      }


  TemplateTransaction.PurchaseBook -up-|> TemplateTransaction.BookTransaction
  TemplateTransaction.RentBook -up-|> TemplateTransaction.BookTransaction


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
